# agr

./: .gitignore  .gitignore.orig  .gitmodules  .gitmodules.orig  CMakeLists.txt  CMakeLists.txt.orig  CONTRIBUTING.md  LICENSE  README.md  README.md.orig  REGISTER_ACCOUNT.md  RUN_NODE.md  agr.doxygen.in  agrio.version.in  agrio_build.sh  agrio_build.sh.orig  agrio_install.sh  agrio_install.sh.orig  agrio_uninstall.sh  pipeline.jsonc  testnet.md  testnet.md.orig  testnet.template  testnet.template.orig
.buildkite/: coverage.yml  coverage.yml.orig  debug.yml  debug.yml.orig  docker.yml  long_running_tests.yml  long_running_tests.yml.orig  pipeline.yml  pipeline.yml.orig  sanitizers.yml
CMakeModules/: AgrioTester.cmake.in  AgrioTester.cmake.in.orig  AgrioTesterBuild.cmake.in  AgrioTesterBuild.cmake.in.orig  FindWasm.cmake  FindWasm.cmake.orig  MASSigning.cmake  MASSigning.cmake.orig  additionalPlugins.cmake  additionalPlugins.cmake.orig  agrio-config.cmake.in  doxygen.cmake  doxygen.cmake.orig  installer.cmake  installer.cmake.orig  package.cmake  wasm.cmake  wasm.cmake.orig
Docker/: Dockerfile  Dockerfile-mainnet  Dockerfile-testnet  Dockerfile.orig  README.md  README.md.orig  clagr.sh  config.ini  config.sample.ini  config.sample.testnet.ini  config.sample.testnet.ini.orig  docker-compose-latest.yml  docker-compose.testnet.yml  docker-compose.yml  docker-compose.yml.orig  nodagrd.sh  nodagrd.sh.orig
contracts/: CMakeLists.txt  CMakeLists.txt.orig
debian/: postinst  postinst.orig
libraries/chain/: CMakeLists.txt  CMakeLists.txt.orig  abi_serializer.cpp  abi_serializer.cpp.orig  agrio_contract.cpp  agrio_contract.cpp.orig  agrio_contract_abi.cpp  apply_context.cpp  apply_context.cpp.orig  asset.cpp  authorization_manager.cpp  authorization_manager.cpp.orig  block_header.cpp  block_header_state.cpp  block_log.cpp  block_log.cpp.orig  block_state.cpp  chain_config.cpp  chain_id_type.cpp  controller.cpp  controller.cpp.orig  fork_database.cpp  genesis_intrinsics.cpp  genesis_state.cpp  genesis_state_root_key.cpp.in  merkle.cpp  name.cpp  protocol_feature_activation.cpp  protocol_feature_manager.cpp  protocol_state_object.cpp  resource_limits.cpp  resource_limits.cpp.orig  snapshot.cpp  thread_utils.cpp  trace.cpp  transaction.cpp  transaction_context.cpp  transaction_context.cpp.orig  transaction_metadata.cpp  wasm_agrio_binary_ops.cpp  (+6 more)
libraries/chain/include/agrio/chain/: abi_def.hpp  abi_def.hpp.orig  abi_serializer.hpp  abi_serializer.hpp.orig  account_object.hpp  account_object.hpp.orig  action.hpp  action_receipt.hpp  agrio_contract.hpp  apply_context.hpp  asset.hpp  authority.hpp  authority_checker.hpp  authorization_manager.hpp  authorization_manager.hpp.orig  block.hpp  block_header.hpp  block_header_state.hpp  block_log.hpp  block_state.hpp  block_summary_object.hpp  block_timestamp.hpp  chain_config.hpp  chain_id_type.hpp  chain_snapshot.hpp  code_object.hpp  config.hpp  config.hpp.orig  contract_table_objects.hpp  contract_table_objects.hpp.orig  contract_types.hpp  controller.hpp  controller.hpp.orig  core_symbol.hpp.in  database_utils.hpp  exceptions.hpp  exceptions.hpp.orig  fixed_key.hpp  fork_database.hpp  generated_transaction_object.hpp  (+46 more)
libraries/chain/include/agrio/chain/webassembly/: binaryen.hpp  common.hpp  runtime_interface.hpp  wabt.hpp  wavm.hpp  wavm.hpp.orig
libraries/chain/webassembly/: binaryen.cpp  wabt.cpp  wavm.cpp
plugins/: COMMUNITY.md  agrio-make_new_plugin.sh
programs/: CMakeLists.txt  CMakeLists.txt.orig
programs/agrio-blocklog/: CMakeLists.txt  main.cpp
scripts/: CMakeLists.txt  abigen.sh  agrio-tn_bounce.sh  agrio-tn_bounce.sh.orig  agrio-tn_down.sh  agrio-tn_roll.sh  agrio-tn_roll.sh.orig  agrio-tn_up.sh  agrio-tn_up.sh.orig  agrio_build.sh  agrio_build_amazon.sh  agrio_build_amazon.sh.orig  agrio_build_centos.sh  agrio_build_darwin.sh  agrio_build_fedora.sh  agrio_install.sh  (+10 more)
(+582 files in other folders)
